perf: use ZGC instead of G1GC (#485)